Fix btn note overflow

--- a/business/src/components/home/style.css
+++ b/business/src/components/home/style.css
@@ -185,7 +185,7 @@
     margin-top: 10px;
   }
   .note {
-    margin-left: 12px;
+    margin-left: 8px;
   }
   .featuresList {
     margin-top: 1.5rem;
